--- a/styles/site.css
+++ b/styles/site.css
@@ -34,13 +34,19 @@ div#scatterArea {
 #mapPopup {
   border: 2px solid white;
   margin-top: 20px;
-  height: 100px;
+  height: 80px;
+  margin-right: 30px;
 }
 
 #driverYearStats {
   border: 2px solid white;
   margin-top: 20px;
   height: 100px;
+}
+
+h3#circuitTitle {
+  margin-top: 3px;
+  margin-bottom: 3px;
 }
 
 
