--- a/styles/site.css
+++ b/styles/site.css
@@ -12,16 +12,14 @@ div#map {
   margin-left: 20px;
 }
 
-div#scatterArea {
-  margin-left: 20px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+#scatterText {
+  width: 400px;
+  font-size: 20px;
+  margin-right: 50px;
 }
 
-#scatterText {
-  width: 390px;
-  font-size: 20px;
+#driverYearStats {
+  width: 400px;
 }
 
 #scatterAnnotations {
@@ -36,24 +34,30 @@ div#scatterArea {
   border: 2px solid white;
   margin-top: 20px;
   height: 80px;
-  margin-right: 30px;
+  width: 400px;
 }
 
 #driverYearStats {
   border: 2px solid white;
   margin-top: 20px;
+  margin-left: 8px;
   height: 100px;
 }
 
 h3.popupTitle {
-  margin-top: 3px;
-  margin-bottom: 3px;
+  margin: 8px 8px 8px 8px;
 }
 
+#circuitName,
+#circuitLocation,
+#driverYearStats text {
+  margin-left: 8px
+}
 
 #mapText {
   width: 400px;
   font-size: 20px;
+  margin-right: 50px;
 }
 
 .axis {
@@ -64,11 +68,14 @@ h3.popupTitle {
   font-family: Helvetica, sans-serif;
 }
 
-div#lineChartArea {
+div#lineChartArea,
+.bar-chart-area,
+div#scatterArea {
   margin-left: 20px;
   display: flex;
   flex-direction: row;
   align-items: center;
+  margin-bottom: 50px;
 }
 
 div#lineText {
@@ -76,7 +83,20 @@ div#lineText {
   font-size: 20px;
 }
 
+.bar-desc {
+  width: 460px;
+  font-size: 20px;
+}
+
 .bar-chart-area {
-  display: flex;
-  flex-direction: row;
+  margin-top: 50px;
+}
+
+button {
+  margin-top: 50px;
+  background: none;
+  border: none;
+  color: white;
+  font-size: 20px;
+  text-decoration: underline;
 }
