--- a/styles/site.css
+++ b/styles/site.css
@@ -49,6 +49,102 @@ img#descr {
   margin-top: 20px;
 }
 
+div#car-info {
+  margin-top: 100px;
+  margin-left: 20px;
+  margin-bottom: 50px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+div#car-and-points {
+  position: relative;
+}
+
+.circle {
+  height: 20px;
+  width: 20px;
+  background-color: black;
+  border: 2px solid white;
+  border-radius: 50%;
+  position: absolute;
+}
+
+.car-popup {
+  /* visibility: hidden; */
+  position: absolute;
+  padding: 4px;
+  width: 160px;
+  height: 130px;
+  border: 1px solid white;
+  line-height: 60%;
+}
+
+.car-popup text {
+  font-size: 11px;
+}
+
+/* start: circles on the car image */
+#circle-1 {
+  top: 100px;
+  left: 54px;
+}
+
+#circle-1-div {
+  visibility: hidden;
+}
+
+#circle-2 {
+  top: 200px;
+  left: 150px;
+}
+
+#circle-2-div {
+  visibility: hidden;
+}
+
+#circle-3 {
+  top: 80px;
+  left: 380px;
+}
+
+#circle-3-div {
+  visibility: hidden;
+}
+
+#circle-4 {
+  top: 150px;
+  left: 500px;
+}
+
+#circle-4-div {
+  visibility: hidden;
+}
+
+#circle-5 {
+  top: 30px;
+  left: 600px;
+}
+
+#circle-5-div {
+  visibility: hidden;
+}
+/* end: circles on the car image */
+
+
+div#infoAnnotations {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+}
+
+div#infoAnnotations img {
+  margin-bottom: 10px;
+}
+
+
 div#map {
   display: flex;
   flex-direction: row;
