--- a/styles/site.css
+++ b/styles/site.css
@@ -174,7 +174,7 @@ div#infoAnnotations {
 }
 
 div#infoAnnotations img {
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
 }
 
 
@@ -211,12 +211,24 @@ div#map {
   /*  */
 }
 
+div#barchartAnnotations img {
+  /* margin-bottom: 10px; */
+}
+
+div#linechartAnnotations img {
+
+}
+
+.imgTitle {
+  margin-bottom: 10px;
+}
+
 #mapAnnotations {
   margin-top: 5%;
 }
 
 div#mapAnnotations img {
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
 }
 
 #mapPopup {
