--- a/styles/site.css
+++ b/styles/site.css
@@ -31,15 +31,12 @@ div.scroll-bounce p {
 }
 
 div#intro {
-  /* margin-top: 5%;
-  margin-bottom: 5%; */
   margin-left: 8%;
   margin-right: 8%;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
-  /* height: 500px; */
+  justify-content: space-evenly;
   height: 90vh
 }
 
@@ -190,9 +187,9 @@ div#map {
 }
 
 #scatterText {
-  width: 400px;
+  width: 350px;
   font-size: 20px;
-  margin-right: 50px;
+  margin-right: 30px;
 }
 
 #driverYearStats {
@@ -280,13 +277,16 @@ h3.popupTitle {
 div#lineChartArea,
 .bar-chart-area,
 div#scatterArea {
-  padding-top: 5%;
+  margin-top: 200px;
+  margin-bottom: 200px;
+  /* padding-top: 5%;
   padding-bottom: 5%;
   padding-left: 6%;  
-  padding-right: 6%;
+  padding-right: 6%; */
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: space-evenly;
 }
 
 div#lineText {
