--- a/styles/site.css
+++ b/styles/site.css
@@ -52,7 +52,7 @@ img#descr {
 
 div#car-info {
   margin-top: 5%;
-  margin-bottom: 5%;
+  margin-bottom: 4%;
   margin-left: 8%;
   margin-right: 8%;
   display: flex;
@@ -283,5 +283,17 @@ button {
   border: none;
   color: white;
   font-size: 20px;
-  text-decoration: underline;
+}
+
+.next-button {
+  cursor: pointer;
+  font-size: 19px;
+  margin-left: 5px;
+  padding: 3px 10px 3px 10px;
+  border-radius: 2px;
+  border: 2px solid white;
+}
+
+.next-button:hover {
+  background-color: rgba(82, 82, 82, 0.493);
 }
